--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.6",
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
