--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0"
+    "react-hot-loader": "^4.13.0",
+    "url": "^0.11.0"
   }
 }
