--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,8 +12,7 @@
     }
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:prettier/recommended"
+    // "eslint:recommended"
   ],
   "globals": {
     "Atomics": "readonly",
