--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@mui/material": "^5.0.6",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
+    "eslint-config-airbnb": "^18.2.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.14",
     "react": "^17.0.2",
