--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-dev": "webpack --mode development --watch",
     "build-prod": "webpack --mode production",
     "start": "webpack serve --hot --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,11 +26,19 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@hot-loader/react-dom": "^17.0.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^6.5.0",
+    "enzyme": "^3.11.0",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.1",
+    "jest": "^27.3.1",
     "prettier": "^2.4.1",
+    "react-test-renderer": "^17.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
