--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.14",
     "react": "^17.0.2",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "url": "^0.11.0"
