--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/material": "^5.0.6",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
