--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^17.0.2",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
+    "react-gallery-carousel": "^0.2.5",
     "react-hot-loader": "^4.13.0",
     "url": "^0.11.0"
   }
