--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "cors": "^2.8.5",
     "eslint-config-airbnb": "^18.2.1",
     "express": "^4.17.1",
+    "fast-csv": "^4.3.6",
     "moment": "^2.29.1",
     "nodemon": "^2.0.14",
+    "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
