--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
     "express": "^4.17.1",
     "fast-csv": "^4.3.6",
     "moment": "^2.29.1",
+    "mongo": "^0.1.0",
+    "mongodb": "^4.2.1",
+    "mongoose": "^6.0.14",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1",
     "react": "^17.0.2",
