--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@mui/material": "^5.0.6",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "express": "^4.17.1",
     "fast-csv": "^4.3.6",
